package com.pokemopoly;

public class Battle {
    // todo
}
