package com.pokemopoly;

public class Main {
    public static void main(String[] args) {
        System.out.println("Welcome to Pokémopoly!");
        Game game = new Game();
        game.start();
    }
}