package com.pokemopoly;

public class Shop {
    // todo
}
