package com.pokemopoly.board.tile;

import com.pokemopoly.Game;
import com.pokemopoly.board.Tile;
import com.pokemopoly.cards.EventCard;
import com.pokemopoly.player.Player;

public class EventTile extends Tile {

    public EventTile(String name, int index) {
        super(name, index);
    }

    public void onLand(Player player, Game game) {
        System.out.println(player.getName() + " landed on " + name + "!");
        EventCard eventCard = game.getDeckManager().drawEvent();
        // todo
    }
}
