package com.pokemopoly.cards;

public interface Card {
    // todo
}
