package com.pokemopoly.player;

public enum ProfessionType {
    TRAINER, FISHER, ROCKET, SCIENTIST

    // todo
}
