package com.pokemopoly.pokemon;

public class Move {
}
