package com.pokemopoly.pokemon;

public class Pokemon {
}
