package com.pokemopoly.pokemon;

public class PokemonSpecies {
}
