package com.pokemopoly.pokemon;

public class StatusEffect {
}
